# afm-simulations

./: .envrc  .gitignore  README.md  afm  dist  pyproject.toml  simulations  tasks.py
afm/: common.py  models.py
simulations/: scenario_reader.py  simulation.py
src/afm_simulations/afm/: common.py  models.py
src/afm_simulations/analysis/: analyze_alpha_dist.py  analyze_beta_gamma_bars.py  analyze_cheating.py  analyze_item_ordering_bias.py  analyze_item_ordering_misspecified.py  analyze_stability.py
src/afm_simulations/scenarios/: afm_cheating.json  afm_item_ordering_bias.json  afm_item_ordering_misspecified.json  afm_stability_single_kc.json  analyze_alpha_dist.py  analyze_beta_cheating.json  cheating_combined_0.json  cheating_combined_thirds.json  cheating_combined_thirds_simple.json  cheating_ideas.json  debug_afm.json  debug_cheating_combined_0.json  debug_cheating_combined_20.json  debug_cheating_combined_5.json  debug_cheating_combined_thirds.json  debug_single_KC.json
src/afm_simulations/scenarios/unused/: afm_cheating_0_0.5_only.json  afm_item_ordering_misspecified.json  alpha_bias.json  debug_cheating.json  debug_cheating_combined_10.json  debug_cheating_combined_15.json  debug_cheating_single_KC.json  tatsuoka.json  tatsuoka_cheating.json
src/afm_simulations/simulations/: common.py  scenario_reader.py  simulation.py
