[tool.poetry]
name = "afm-simulations"
version = "1.0.0"
description = "Code used in PhD thesis Exploring Statistical Biases in Educational Data: A Simulation-Based Approach."
authors = ["Jaroslav Čechák <xcechak1@fi.muni.cz>"]
readme = "README.md"
packages = [{include = "afm_simulations", from = "src"}]

[tool.poetry.scripts]
figure-3-2 = "afm_simulations.analysis.analyze_stability:main"
figure-3-3 = "afm_simulations.analysis.analyze_stability:main"
figure-4-1 = "afm_simulations.analysis.analyze_alpha_dist:main"
figure-4-2 = "afm_simulations.analysis.analyze_beta_gamma_bars:main"
figure-4-3 = "afm_simulations.analysis.analyze_cheating:main"
figure-5-3 = "afm_simulations.analysis.analyze_item_ordering_bias:main"
figure-5-4 = "afm_simulations.analysis.analyze_item_ordering_misspecified:main"
figure-5-5 = "afm_simulations.analysis.analyze_item_ordering_misspecified:main"

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
seaborn = "^0.12.2"
scipy = "^1.11.3"
pandas = "^2.1.1"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.1"
tensorflow = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
invoke = "^2.2.0"
data-science-types = "^0.2.23"
types-tqdm = "^4.66.0.2"
types-tensorflow = "^2.12.0.7"
pandas-stubs = "^2.0.3.230814"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120
target_version = ["py39", "py310"]

[tool.isort]
profile = "black"
known_first_party = ["afm_simulations"]

[tool.flake8]
max-line-length = 120
exclude = "venv"

[tool.mypy]
python_version = "3.10"
exclude = "venv"
check_untyped_defs = "true"